<resources>
    <string name="app_name">TimeTable Master DB</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="time_table">Time-Table</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="msc_electronics">MSC ELECTRONICS</string>
    <string name="bca">BCA</string>
    <string name="bsc_cs">BSC CS</string>
    <string name="choose_class_and_sem">CHOOSE CLASS AND SEM</string>
    <string name="mba">MBA</string>
    <string name="bcom_finance">BCOM FINANCE</string>
    <string name="bcom_ca">BCOM CA</string>
    <string name="bba">BBA</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
